--- a/module-3/lab-supervised-learning-feature-extraction/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-feature-extraction/your-code/main.ipynb
@@ -1522,8 +1522,8 @@
        "Helix Jump                                            273\n",
        "Angry Birds Classic                                   273\n",
        "Calorie Counter - MyFitnessPal                        254\n",
-       "Duolingo: Learn Languages Free                        240\n",
        "Candy Crush Saga                                      240\n",
+       "Duolingo: Learn Languages Free                        240\n",
        "Garena Free Fire                                      222\n",
        "8 Ball Pool                                           219\n",
        "Calorie Counter - Macros                              200\n",
@@ -1537,8 +1537,8 @@
        "Clash Royale                                          165\n",
        "Adobe Acrobat Reader                                  162\n",
        "Episode - Choose Your Story                           160\n",
-       "Block Puzzle                                          154\n",
        "Flow Free                                             154\n",
+       "Block Puzzle                                          154\n",
        "Bubble Shooter                                        145\n",
        "Calorie Counter - MyNetDiary                          139\n",
        "Agar.io                                               136\n",
@@ -1549,36 +1549,36 @@
        "Gardenscapes                                          133\n",
        "Facebook                                              132\n",
        "                                                     ... \n",
-       "Dashlane Free Password Manager                          2\n",
-       "Amazon Prime Video                                      2\n",
-       "Google Translate                                        2\n",
-       "Google Primer                                           2\n",
+       "Calendar Widget Month + Agenda                          2\n",
+       "Calculator with Percent (Free)                          2\n",
+       "CM Browser - Ad Blocker , Fast Download , Privacy       2\n",
        "Calculator Plus Free                                    2\n",
-       "Draw A Stickman                                         1\n",
-       "Best Ovulation Tracker Fertility Calendar App Glow      1\n",
-       "Daily Workouts - Exercise Fitness Routine Trainer       1\n",
-       "CBS News                                                1\n",
-       "Caller ID +                                             1\n",
-       "Draw In                                                 1\n",
-       "Google Slides                                           1\n",
-       "HD Camera                                               1\n",
-       "Best Fiends - Free Puzzle Game                          1\n",
-       "Free Live Talk-Video Call                               1\n",
-       "All-in-One Mahjong 3 FREE                               1\n",
-       "Bed Time Fan - White Noise Sleep Sounds                 1\n",
-       "Google Trips - Travel Planner                           1\n",
-       "HomeWork                                                1\n",
-       "GPS Map Free                                            1\n",
-       "Discover Mobile                                         1\n",
-       "Fruit Block - Puzzle Legend                             1\n",
-       "Apartment Decorating Ideas                              1\n",
+       "Amazon Prime Video                                      2\n",
        "Drawing for Kids Learning Games for Toddlers age 3      1\n",
+       "HD Camera                                               1\n",
        "CallApp: Caller ID, Blocker & Phone Call Recorder       1\n",
-       "Calculator - unit converter                             1\n",
-       "Caf - Mon Compte                                        1\n",
-       "Draw a Stickman: EPIC 2                                 1\n",
+       "Draw In                                                 1\n",
+       "Discover Mobile                                         1\n",
+       "CBS News                                                1\n",
+       "Bed Time Fan - White Noise Sleep Sounds                 1\n",
+       "Draw A Stickman                                         1\n",
        "Calendar+ Schedule Planner App                          1\n",
+       "All-in-One Mahjong 3 FREE                               1\n",
+       "HomeWork                                                1\n",
+       "Draw a Stickman: EPIC 2                                 1\n",
        "DashClock Widget                                        1\n",
+       "Free Live Talk-Video Call                               1\n",
+       "GPS Map Free                                            1\n",
+       "Google Slides                                           1\n",
+       "Google Trips - Travel Planner                           1\n",
+       "Best Fiends - Free Puzzle Game                          1\n",
+       "Calculator - unit converter                             1\n",
+       "Apartment Decorating Ideas                              1\n",
+       "Caf - Mon Compte                                        1\n",
+       "Fruit Block - Puzzle Legend                             1\n",
+       "Daily Workouts - Exercise Fitness Routine Trainer       1\n",
+       "Best Ovulation Tracker Fertility Calendar App Glow      1\n",
+       "Caller ID +                                             1\n",
        "Name: App, Length: 865, dtype: int64"
       ]
      },
@@ -1618,17 +1618,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def positive_function(x):\n",
-    "    return np.where((x =='Positive'))"
+    "    return len(np.where((x =='Positive'))[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1637,13 +1637,13 @@
        "23998"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(positive_function(review_missing_removed.Sentiment)[0])"
+    "positive_function(review_missing_removed.Sentiment)"
    ]
   },
   {
@@ -1667,13 +1667,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/miniconda3/envs/ironhack/lib/python3.7/site-packages/ipykernel_launcher.py:1: FutureWarning: using a dict on a Series for aggregation\n",
+      "is deprecated and will be removed in a future version\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "google_agg = \n",
-    "\n"
+    "google_agg  = review_missing_removed.groupby('App')['Sentiment'].agg({'Positive': positive_function, 'Total': 'count'})"
    ]
   },
   {
@@ -1685,11 +1693,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Positive</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>App</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10 Best Foods for You</th>\n",
+       "      <td>162</td>\n",
+       "      <td>194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室</th>\n",
+       "      <td>31</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11st</th>\n",
+       "      <td>23</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1800 Contacts - Lens Store</th>\n",
+       "      <td>64</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1LINE – One Line with One Touch</th>\n",
+       "      <td>27</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Positive  Total\n",
+       "App                                              \n",
+       "10 Best Foods for You                  162    194\n",
+       "104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室        31     40\n",
+       "11st                                    23     39\n",
+       "1800 Contacts - Lens Store              64     80\n",
+       "1LINE – One Line with One Touch         27     38"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "google_agg.head(5)"
    ]
   },
   {
@@ -1703,11 +1787,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_agg['Positive Ratio'] = google_agg['Positive']/google_agg['Total']"
    ]
   },
   {
@@ -1719,11 +1804,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "google_agg.drop(columns = ['Positive', 'Total'], inplace=True)"
    ]
   },
   {
@@ -1737,11 +1824,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Positive Ratio</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>App</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10 Best Foods for You</th>\n",
+       "      <td>0.835052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室</th>\n",
+       "      <td>0.775000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11st</th>\n",
+       "      <td>0.589744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1800 Contacts - Lens Store</th>\n",
+       "      <td>0.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1LINE – One Line with One Touch</th>\n",
+       "      <td>0.710526</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Positive Ratio\n",
+       "App                                             \n",
+       "10 Best Foods for You                   0.835052\n",
+       "104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室        0.775000\n",
+       "11st                                    0.589744\n",
+       "1800 Contacts - Lens Store              0.800000\n",
+       "1LINE – One Line with One Touch         0.710526"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_agg.head()"
    ]
   },
   {
@@ -1757,11 +1913,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>App</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Reviews</th>\n",
+       "      <th>Installs</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Content Rating</th>\n",
+       "      <th>Genres</th>\n",
+       "      <th>Last Updated</th>\n",
+       "      <th>Current Ver</th>\n",
+       "      <th>Android Ver</th>\n",
+       "      <th>Price Numerical</th>\n",
+       "      <th>Positive Ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Coloring book moana</td>\n",
+       "      <td>ART_AND_DESIGN</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>967.0</td>\n",
+       "      <td>500,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Art &amp; Design;Pretend Play</td>\n",
+       "      <td>2018-01-15</td>\n",
+       "      <td>2.0.0</td>\n",
+       "      <td>4.0.3 and up</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.590909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Coloring book moana</td>\n",
+       "      <td>FAMILY</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>974.0</td>\n",
+       "      <td>500,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Art &amp; Design;Pretend Play</td>\n",
+       "      <td>2018-01-15</td>\n",
+       "      <td>2.0.0</td>\n",
+       "      <td>4.0.3 and up</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.590909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Garden Coloring Book</td>\n",
+       "      <td>ART_AND_DESIGN</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>13791.0</td>\n",
+       "      <td>1,000,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Art &amp; Design</td>\n",
+       "      <td>2017-09-20</td>\n",
+       "      <td>2.9.2</td>\n",
+       "      <td>3.0 and up</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.711111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FlipaClip - Cartoon animation</td>\n",
+       "      <td>ART_AND_DESIGN</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>194216.0</td>\n",
+       "      <td>5,000,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Art &amp; Design</td>\n",
+       "      <td>2018-08-03</td>\n",
+       "      <td>2.2.5</td>\n",
+       "      <td>4.0.3 and up</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Boys Photo Editor - Six Pack &amp; Men's Suit</td>\n",
+       "      <td>ART_AND_DESIGN</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>654.0</td>\n",
+       "      <td>100,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Art &amp; Design</td>\n",
+       "      <td>2018-03-20</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>4.0.3 and up</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.605263</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         App        Category  Rating  \\\n",
+       "0                        Coloring book moana  ART_AND_DESIGN     3.9   \n",
+       "1                        Coloring book moana          FAMILY     3.9   \n",
+       "2                       Garden Coloring Book  ART_AND_DESIGN     4.4   \n",
+       "3              FlipaClip - Cartoon animation  ART_AND_DESIGN     4.3   \n",
+       "4  Boys Photo Editor - Six Pack & Men's Suit  ART_AND_DESIGN     4.1   \n",
+       "\n",
+       "    Reviews    Installs  Type Content Rating                     Genres  \\\n",
+       "0     967.0    500,000+  Free       Everyone  Art & Design;Pretend Play   \n",
+       "1     974.0    500,000+  Free       Everyone  Art & Design;Pretend Play   \n",
+       "2   13791.0  1,000,000+  Free       Everyone               Art & Design   \n",
+       "3  194216.0  5,000,000+  Free       Everyone               Art & Design   \n",
+       "4     654.0    100,000+  Free       Everyone               Art & Design   \n",
+       "\n",
+       "  Last Updated Current Ver   Android Ver  Price Numerical  Positive Ratio  \n",
+       "0   2018-01-15       2.0.0  4.0.3 and up              0.0        0.590909  \n",
+       "1   2018-01-15       2.0.0  4.0.3 and up              0.0        0.590909  \n",
+       "2   2017-09-20       2.9.2    3.0 and up              0.0        0.711111  \n",
+       "3   2018-08-03       2.2.5  4.0.3 and up              0.0        1.000000  \n",
+       "4   2018-03-20         1.1  4.0.3 and up              0.0        0.605263  "
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_missing_removed.merge(google_agg, on ='App').head()"
    ]
   },
   {
@@ -1775,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
