--- a/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,16 +1011,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8019315256841186"
+       "0.8104078171019864"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,16 +1045,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8348915437703821"
+       "0.7977914692609647"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,11 +1086,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "X_train09, X_test09, y_train09, y_test09=train_test_split(X, y, test_size=0.1)"
    ]
   },
   {
@@ -1102,11 +1102,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "auto_model09=LinearRegression()\n",
+    "auto_model09.fit(X_train09,y_train09)"
    ]
   },
   {
@@ -1118,11 +1130,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8083477288313352"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "y_pred=auto_model09.predict(X_train09)\n",
+    "r2_score(y_train09, y_pred) \n"
    ]
   },
   {
@@ -1134,11 +1158,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8154422465666717"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "y_pred=auto_model09.predict(X_test09)\n",
+    "r2_score(y_test09, y_pred) \n"
    ]
   },
   {
@@ -1154,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1170,11 +1206,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "selector=RFE(auto_model, n_features_to_select=3)"
    ]
   },
   {
@@ -1186,11 +1222,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 4, 3, 1, 1])"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "selector.fit(X_train,y_train)\n",
+    "selector.ranking_ "
    ]
   },
   {
@@ -1204,11 +1252,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "Xred=X[X.columns[selector.support_]]\n",
+    "X_train_reduced, X_test_reduced, y_train_reduced, y_test_reduced = train_test_split(Xred, y, test_size=0.2)"
    ]
   },
   {
@@ -1220,11 +1269,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here: \n"
+    "auto_model_reduce=LinearRegression()\n",
+    "auto_model_reduce.fit(X_train_reduced,y_train_reduced)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7065769128343582"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred=auto_model_reduce.predict(X_train_reduced)\n",
+    "r2_score(y_train_reduced, y_pred) \n"
    ]
   },
   {
